# vector_retrieval

./: CMakeLists.txt  README.md
bench/: BENCHMARK.md  bench_runner.cpp  copy.cpp
bench/configs/:  v1_random_l2_d128.yaml
benchmark_results/: results.csv
docs/: API.md
include/vecsearch/: bruteforce_index.h  distance.h  hnsw_index.h  index.h  ivf_flat_index.h  types.h
src/: distance.cpp  hnsw_index.cpp  ivf_flat_index.cpp
